--- a/devops.html
+++ b/devops.html
@@ -38,15 +38,27 @@
   
     <div class="container">
 <!--Begin body here --> 
-<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qs49Vfwk&k=Job&j=obB08fwE&__jvst=Employee+Referral&__jvsd=sbDU6fwy&__jvsc=Twitter&bid=nuWSTKwq'>Cirrus Logic Careers - DevOps Engineer</a></h5> 
+<h5><a href='https://synedat.join.com/jobs/259910-devops-engineer-m-w-d'>Job @ Synedat Consulting (Frankfurt): DevOps Engin... | JOIN</a></h5> 
 <p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-07-25</p>
+<hr/>
+<h5><a href='https://synedat.join.com/jobs/266644-devops-engineer-m-w-d'>Job @ Synedat Consulting (Berlin): DevOps Engineer... | JOIN</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-07-25</p>
+<hr/>
+<h5><a href='https://synedat.join.com/jobs/267792-devops-engineer-m-w-d'>Job @ Synedat Consulting (Munich): DevOps Engineer... | JOIN</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-07-25</p>
+<hr/>
+<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qs49Vfwk&k=Job&j=obB08fwE&__jvst=Employee+Referral&__jvsd=sbDU6fwy&__jvsc=Twitter&bid=nuWSTKwq'>Cirrus Logic Careers - DevOps Engineer</a></h5> 
+<p><span class="badge badge-light">Austin</span></p>
 <p>Posted on:: 2019-07-25</p>
 <hr/>
 <h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qZlaVfw9&k=Job&j=ot7kafwO&__jvst=Employee&__jvsd=s1A2Kgw8&__jvsc=Twitter&bid=nVeQTKw7'>Benefitfocus Careers - Sr. DevOps Engineer</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-07-25</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/Spruceinfotech2/743999692278833-devops-software-engineer'>spruceinfotech DevOps Software Engineer | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Spruceinfotech2/743999692278833-devops-software-engineer'>spruceinfotech DevOps Software Engineer | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Ottawa, ON, Canada</span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
@@ -54,7 +66,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
-<h5><a href='http://artificialsolutions46581.recruiterbox.com/jobs/fk03fby'>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://artificialsolutions46581.recruiterbox.com/jobs/fk03fby'>
     DevOps Engineer (Software Development) at Artificial Solutions
 </a></h5> 
 <p><span class="badge badge-light">Barcelona</span></p>
@@ -84,7 +96,7 @@
 <p><span class="badge badge-light">New York, NY</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/info-stretch-corporation/job/oxfzafwf'>Infostretch Corporation Careers - DevOps Engineer</a></h5> 
+<h5><a href='http://jobs.jobvite.com/info-stretch-corporation/job/oxfzafwf'>Infostretch Corporation Careers - DevOps Engineer</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Jul 16, 2019 ... Overall 8+ years of Experience in Development and 2+ years in DevOps; This 
 needs to be a hands-on developer resource not an Admin resource (release?...</p>
@@ -147,7 +159,7 @@ term?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://gengo.applytojob.com/apply/DwbfcYubnm/Operations-Engineer-DevOps'>Operations Engineer (DevOps) - Gengo - Career Page</a></h5> 
+<h5><a href='http://gengo.applytojob.com/apply/DwbfcYubnm/Operations-Engineer-DevOps'>Operations Engineer (DevOps) - Gengo - Career Page</a></h5> 
 <p><span class="badge badge-light">Tokyo, Japan</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
@@ -194,7 +206,7 @@ term?...</p>
 <p>Jul 17, 2019 ... Let your line manager know and click apply now to a short application and send 
 us your CV. Any questions before taking the next step? You can contact Dorian.</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/humio/jobs/4361639002'>Job Application for DevOps Support Engineer - US Remote at Humio</a></h5> 
+<h5><a href='https://boards.greenhouse.io/humio/jobs/4361639002'>Job Application for DevOps Support Engineer - US Remote at Humio</a></h5> 
 <p><span class="badge badge-light">San Francisco</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
@@ -332,12 +344,12 @@ published: 08.03.2019). Apply now or check the other available jobs.</p>
 Engineer in Z?rich (published: 19.07.2019). Apply now or check the other 
 available?...</p>
 <hr/>
-<h5><a href='https://viva.workable.com/j/D3BD40666D?viewed=true'>DevOps Engineer - Apply online - Viva Wallet - Jobs</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://viva.workable.com/j/D3BD40666D?viewed=true'>DevOps Engineer - Apply online - Viva Wallet - Jobs</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>6 days ago ... As a DevOps Engineer your focus will be to collaborate with developer and 
 operations teams to maintain and evolve our platforms. More specifically, as a?...</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://cdl-2.workable.com/j/60C5EB3E5A'>CDL - Jobs: DevOps Data Engineer - Apply online</a></h5> 
+<h5><a href='https://cdl-2.workable.com/j/60C5EB3E5A'>CDL - Jobs: DevOps Data Engineer - Apply online</a></h5> 
 <p><span class="badge badge-light">England, United Kingdom</span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
@@ -345,7 +357,7 @@ operations teams to maintain and evolve our platforms. More specifically, as a?.
 <p><span class="badge badge-light">England, United Kingdom</span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
-<h5><a href='https://www.workable.com/j/17F7EFEAE8'>AirTree Ventures - Jobs: Thematic: DevOps and AWS Infrastructure ...</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://www.workable.com/j/17F7EFEAE8'>AirTree Ventures - Jobs: Thematic: DevOps and AWS Infrastructure ...</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>1 day ago ... Alyona has a PhD in NLP and Machine Learning with an international reputation, 
 and has worked for companies like Google and Cisco. Nathan is ex-Chief?...</p>
@@ -400,7 +412,7 @@ relationships through actionable data, advanced analytics and machine learning.<
 <p>4 days ago ... Position Description: As a DevOps Engineer, you will play a key role developing 
 on the AWS platform, as well as crafting and implementing infrastructure as?...</p>
 <hr/>
-<h5><a href='http://pitchup.applytojob.com/apply/98jLp3VY2X/Devops-Engineer'>Devops Engineer - Pitchup.com - Career Page</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://pitchup.applytojob.com/apply/98jLp3VY2X/Devops-Engineer'>Devops Engineer - Pitchup.com - Career Page</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-22</p>
 <hr/>
@@ -452,25 +464,7 @@ on the AWS platform, as well as crafting and implementing infrastructure as?...<
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-22</p>
 <hr/>
-<h5><a href='https://solvinity.recruitee.com/l/nl/o/senior-devops-engineer'>
-      Senior DevOps Engineer - Solvinity
-    </a></h5> 
-<p><span class="badge badge-light"></span></p>
-<p>Posted on: 2019-07-22</p>
-<hr/>
-<h5><a href='https://solvinity.recruitee.com/l/nl/o/senior-devops-engineer-1'>
-      Senior DevOps Engineer - Solvinity
-    </a></h5> 
-<p><span class="badge badge-light"></span></p>
-<p>Posted on: 2019-07-22</p>
-<hr/>
-<h5><a href='https://solvinity.recruitee.com/l/nl/o/senior-devops-engineer-assen'>
-      Senior DevOps Engineer - Solvinity
-    </a></h5> 
-<p><span class="badge badge-light"></span></p>
-<p>Posted on: 2019-07-22</p>
-<hr/>
-
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/>
 
 <!--End body here -->
 
