--- a/machine.html
+++ b/machine.html
@@ -47,11 +47,11 @@
 <p><span class="badge badge-light">Chicago</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/centralway/job/o7aaafwl'>Numbrs Personal Finance AG Careers - Machine Learning Engineer</a></h5> 
+<h5><a href='https://jobs.jobvite.com/centralway/job/o7aaafwl'>Numbrs Personal Finance AG Careers - Machine Learning Engineer</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<h5><a href='https://jobs.jobvite.com/centralway/job/o9aaafwn'>Numbrs Personal Finance AG Careers - Machine Learning Scientist</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/centralway/job/o9aaafwn'>Numbrs Personal Finance AG Careers - Machine Learning Scientist</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
@@ -81,7 +81,7 @@
 <p><span class="badge badge-light">Paris Paris</span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://mtailor.workable.com/j/86AB8197A4'>MTailor - Jobs: ML (Machine Learning) and Backend Engineer - Apply online</a></h5> 
+<h5><a href='https://mtailor.workable.com/j/86AB8197A4'>MTailor - Jobs: ML (Machine Learning) and Backend Engineer - Apply online</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
@@ -113,7 +113,7 @@ edge?...</p>
 <p>4 days ago ... You'll join our Applied Machine Learning Team and help our team drive customer 
 acquisition and revenue growth in 2019. You value collaboration and want to?...</p>
 <hr/>
-<h5><a href='https://www.workable.com/j/DAA2DC9722'>OneinaMil - Jobs: Data Science Machine Learning Lead - Apply online</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://www.workable.com/j/DAA2DC9722'>OneinaMil - Jobs: Data Science Machine Learning Lead - Apply online</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>1 day ago ... ... You will participate in partnerships with data science leaders, like our 
 partnership with NVIDIA to deliver Deep Learning Institute (DLI) training to the 
@@ -201,7 +201,7 @@ and data science. A successful candidate should also have previous?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-20</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/qualtrics/jobs/1774038'>Job Application for iQ Machine Learning Engineer - Seattle  at Qualtrics</a></h5> 
+<h5><a href='https://boards.greenhouse.io/qualtrics/jobs/1774038'>Job Application for iQ Machine Learning Engineer - Seattle  at Qualtrics</a></h5> 
 <p><span class="badge badge-light">Seattle Seattle</span></p>
 <p>Posted on: 2019-07-20</p>
 <hr/>
@@ -271,7 +271,7 @@ in algorithms and specifically Machine Learning (including Deep Learning).</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-18</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/researchinnovations.com/08a380a6-056d-42ed-9f20-c266df3f159e'>Research Innovations - Big Data Machine Learning Engineer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/researchinnovations.com/08a380a6-056d-42ed-9f20-c266df3f159e'>Research Innovations - Big Data Machine Learning Engineer</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-17</p>
 <hr/>
@@ -357,7 +357,7 @@ passionate about having a positive impact on the world. You are enthusiastic?...
 <p>6 days ago ... Develop solutions using Machine Learning/Deep Learning and other advanced 
 technologies to solve a variety of problems; Translate user stories and business?...</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/twitch/jobs/4341945002'>Job Application for Senior Machine Learning Infrastructure Engineer, Safety Product at Twitch</a></h5> 
+<h5><a href='https://boards.greenhouse.io/twitch/jobs/4341945002'>Job Application for Senior Machine Learning Infrastructure Engineer, Safety Product at Twitch</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-14</p>
 <hr/>
@@ -377,7 +377,7 @@ technologies to solve a variety of problems; Translate user stories and business
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-14</p>
 <hr/>
-<h5><a href='http://jobs.jobvite.com/tsra-main/job/onEcafw7'>Xperi Careers - Senior Systems Administrator - Machine Learning</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/tsra-main/job/onEcafw7'>Xperi Careers - Senior Systems Administrator - Machine Learning</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Jul 7, 2019 ... Stand out and be the lead engineer as Xperi expands into the exciting area of 
 Machine Learning. We are currently seeking a motivated human to join our team
@@ -387,7 +387,7 @@ Machine Learning. We are currently seeking a motivated human to join our team
 <p><span class="badge badge-light">Lenexa, KS</span></p>
 <p>Posted on: 2019-07-14</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://oneinamil.workable.com/j/00BAFA4E39'>OneinaMil - Jobs: Data Science Machine Learning Lead - Apply online</a></h5> 
+<h5><a href='https://oneinamil.workable.com/j/00BAFA4E39'>OneinaMil - Jobs: Data Science Machine Learning Lead - Apply online</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-14</p>
 <hr/>
@@ -448,7 +448,7 @@ are?...</p>
 <p>2 days ago ... As a Machine Learning Engineer at Lastline, you will develop new machine 
 learning models and improve existing ones to enhance our network detection?...</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/workfusion/67ddd885-308b-44be-938e-9b2ce7b2551f'>WorkFusion - Software Engineer (RPA &amp; Machine Learning)</a></h5> 
+<h5><a href='https://jobs.lever.co/workfusion/67ddd885-308b-44be-938e-9b2ce7b2551f'>WorkFusion - Software Engineer (RPA &amp; Machine Learning)</a></h5> 
 <p><span class="badge badge-light">Minsk</span></p>
 <p>Posted on: 2019-07-11</p>
 <hr/>
@@ -460,7 +460,7 @@ learning models and improve existing ones to enhance our network detection?...</
 <p><span class="badge badge-light">Seattle</span></p>
 <p>Posted on: 2019-07-11</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/thredup/2ece8233-3052-4734-b730-41625dfada42'>thredUP - Staff Machine Learning Engineer - Core Algorithms</a></h5> 
+<h5><a href='https://jobs.lever.co/thredup/2ece8233-3052-4734-b730-41625dfada42'>thredUP - Staff Machine Learning Engineer - Core Algorithms</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-11</p>
 <hr/>
@@ -472,7 +472,7 @@ learning models and improve existing ones to enhance our network detection?...</
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-11</p>
 <hr/>
-
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/>
 
 <!--End body here -->
 
